--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -6,8 +6,25 @@
 }
 
 .bg-square{
-    background-color: rgba(0, 0, 0,70%);
+    background-color: rgba(0, 0, 0,60%);
 }
 .d-block{
-    height:400px; 
+    height:500px;
+    overflow: hidden; 
 }
+
+.container-fluid{
+    height: 90%;
+    width: 100%;
+  
+   }
+   
+   .carousel-inner img {
+    
+      width: 100%;
+      max-height: 460px;
+  }
+  
+  .carousel-inner{
+   height: 500px;
+  }
